tried to make it a desktop app not yet working